--- a/BuiDuyBinh_2011062484/Views/Home/Index.cshtml
+++ b/BuiDuyBinh_2011062484/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model BuiDuyBinh_2011062484.ViewModels.CoursesViewModel
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -7,7 +8,7 @@
 </div>
 
 <ul class="course">
-    @foreach(var course in Model)
+    @foreach(var course in Model.UpcomingCourses)
             {
                 <li>
                     <div class="date">
@@ -21,11 +22,49 @@
                     <div class="details">
                         <span class="lecturer">
                             @course.Lecturer.Name
+                            @if (Model.ShowAction)
+                            {
+                            <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturerId">Follow</button>
+                            }
                         </span>
                         <span class="category">
                             @course.Category.Name
                         </span>
+                        @if (Model.ShowAction)
+                        {
+                        <button data-course-id="@course.Id" class="btn btn-default btn-sm js-toggle-attendance">Going?</button>
+                        }
                     </div>
                 </li>
             }
 </ul>
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $(".js-toggle-attendances").click(function (e) {
+                var button = $(e.target);
+                $.post("/api/attendaces", { courseId: button.attr("data-course-id") })
+                    .done(function () {
+                        button
+                            .removeClass("btn-default")
+                            .addClass("btn-info")
+                            .text("Going");
+                    })
+                    .fail(function () {
+                        alert("something failed!");
+                    });
+            });
+            $(".js-toggle-follow").click(fuction(e) {
+                var button = $(e.target);
+                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
+                    .done(function () {
+                        button.text("Following");
+                    })
+                    .fail(function () {
+                        alert("something failed");
+                    });
+            });
+        });
+    </script>
+    }
