--- a/BuiDuyBinh_2011062484/Views/Shared/_LoginPartial.cshtml
+++ b/BuiDuyBinh_2011062484/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@User.Identity.GetUserName() <span class="caret"></span></a>
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         <ul class="dropdown-menu">
-            <li><a href="#">Course I'm Going'</a></li>
+            <li><a href="@Url.Action("Attending","Course")">Course I'm Going'</a></li>
             <li><a href="#">Lecture I'm Folowing'</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
